2015-10-25  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Added information from SCSI-3 SBC-1.

2015-10-24  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Added header information from SCSI-2.

2015-10-24  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	* DiscImageChef.Decoders.csproj:
	  Implement SCSI-1 Mode Page decoding.

2015-10-23  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Enums.cs:
	* SCSI/Inquiry.cs:
	  Added information from ECMA-111.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* SCSI/EVPD.cs:
	* DiscImageChef.Decoders.csproj:
	  Implemented SCSI VPDs 0x00 to 0x80.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* ATA/Identify.cs:
	  Remove unused code.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* ATA/ATA.cs:
	* ATA/Identify.cs:
	* DiscImageChef.Decoders.csproj:
	  Rename fields, methods and structs to more adequate names.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* ATA/ATA.cs:
	  Rename SCSI decoders fields, methods and structs to more
	  adequate names.

	* SCSI/MMC/MMC.cs:
	* DiscImageChef.Decoders.csproj:
	  Separated SCSI decoders by type.

	* SCSI/Enums.cs:
	* SCSI/Inquiry.cs:
	* SCSI/VendorString.cs:
	  Rename fields, methods and structs to more adequate names.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Enums.cs:
	* SCSI/Inquiry.cs:
	* SCSI/MMC/OPW.cs:
	* SCSI/MMC/MMC.cs:
	* SCSI/MMC/AACS.cs:
	* SCSI/MMC/CPRM.cs:
	* SCSI/MMC/Enums.cs:
	* SCSI/MMC/Hybrid.cs:
	* SCSI/VendorString.cs:
	* SCSI/MMC/WriteProtect.cs:
	* SCSI/MMC/DiscInformation.cs:
	* SCSI/MMC/TrackInformation.cs:
	* DiscImageChef.Decoders.csproj:
	  Separated SCSI decoders by type.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* CD/TOC.cs:
	* CD/PMA.cs:
	* CD/ATIP.cs:
	* CD/Session.cs:
	* CD/FullTOC.cs:
	* CD/CDTextOnLeadIn.cs:
	  Rename fields, methods and structs to more adequate names.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* CD/CD.cs:
	* CD/TOC.cs: